Crear swaggers para los endpoints y el README
Se crearon los swaggers para los endpoints y se hizo el README pero le falta poner la imagen de sonarLint