@@ -8,7 +8,6 @@ import com.mobydigital.segunda.evaluacion.model.PoliticalParty;
 import com.mobydigital.segunda.evaluacion.repository.CandidateRepository;
 import com.mobydigital.segunda.evaluacion.repository.PoliticalPartyRepository;
 import com.mobydigital.segunda.evaluacion.mapper.CandidateMapper;
-import com.mobydigital.segunda.evaluacion.runner.RunCommand;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CandidateService {
@@ -58,7 +56,7 @@ public class CandidateService {
         logger.info("Getting all candidate");
         return repository.findAll().stream()
                 .map(candidateMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
